--- a/AdminView/Web.config
+++ b/AdminView/Web.config
@@ -60,4 +60,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
     </compilers>
   </system.codedom>
+	<connectionStrings>
+		<add name="FunkoPopDBConnection" connectionString="data source=FRANCO-PC\SQLEXPRESS;initial catalog=DBFUNKOPOP;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
