--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -50,7 +50,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CART.cs" />
+    <Compile Include="CITY.cs" />
+    <Compile Include="CLIENT.cs" />
+    <Compile Include="COLLECTION.cs" />
+    <Compile Include="PRODUCT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PROVINCE.cs" />
+    <Compile Include="SALE.cs" />
+    <Compile Include="SALE_DETAIL.cs" />
+    <Compile Include="USER.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
