--- a/AdminView/Web.config
+++ b/AdminView/Web.config
@@ -61,6 +61,6 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="FunkoPopDBConnection" connectionString="data source=FRANCO-PC\SQLEXPRESS;initial catalog=DBFUNKOPOP;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="FunkoPopDBConnection" connectionString="data source=.;initial catalog=DBFUNKOPOP;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
