--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -50,16 +50,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CART.cs" />
-    <Compile Include="CITY.cs" />
-    <Compile Include="CLIENT.cs" />
-    <Compile Include="COLLECTION.cs" />
-    <Compile Include="PRODUCT.cs" />
+    <Compile Include="Cart.cs" />
+    <Compile Include="City.cs" />
+    <Compile Include="Client.cs" />
+    <Compile Include="Collection.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PROVINCE.cs" />
-    <Compile Include="SALE.cs" />
-    <Compile Include="SALE_DETAIL.cs" />
-    <Compile Include="USER.cs" />
+    <Compile Include="Province.cs" />
+    <Compile Include="Sale.cs" />
+    <Compile Include="Sale_Detail.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
