--- a/AdminView/Web.config
+++ b/AdminView/Web.config
@@ -65,7 +65,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="FunkoPopDbConnection" connectionString="data source=DESKTOP-3RF7G2C\SQLEXPRESS;initial catalog=DBFUNKOPOP;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="FunkoPopDbConnection" connectionString="data source=(local)\SQLEXPRESS;initial catalog=DBFUNKOPOP;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
