--- a/Data/App.config
+++ b/Data/App.config
@@ -11,6 +11,6 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="FunkoPopDbConnection" connectionString="data source=DESKTOP-3RF7G2C\SQLEXPRESS;initial catalog=DBFUNKOPOP;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="FunkoPopDbConnection" connectionString="data source=(local)\SQLEXPRESS;initial catalog=DBFUNKOPOP;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
