--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -52,7 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FunkoPopContext.cs" />
+    <Compile Include="ProductData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CollectionData.cs" />
     <Compile Include="UserData.cs" />
   </ItemGroup>
   <ItemGroup>
